src/Test/Fixtures/Good/Gates/zzLet.lf
let qs: [qubit; 2] = ZZ(1, q0, q1);