src/Test/Fixtures/Bad/BitQubit/unexpectedCommaAfterMeasrBitDeclaration.lf
let b : bit = measr(qs),;